cloudflare incomplete config

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.6.4",
   "license": "MIT",
   "private": true,
+  "main": "dist/worker/worker.js",
   "scripts": {
     "dev": "vite",
     "lint": "npm-run-all lint:*",
@@ -31,6 +32,7 @@
     "vite": "^2.6.14"
   },
   "dependencies": {
+    "@cloudflare/kv-asset-handler": "^0.1.3",
     "@headlessui/react": "^1.4.1",
     "@heroicons/react": "^1.0.5",
     "@shopify/hydrogen": "^0.6.4",
